# vulkan-project

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
shaders/: assembly.frag  gaussblur.frag  gaussblur.vert  gbuffer.frag  gbuffer.vert  mesh.vert  pbr.frag  pbr.vert  quad.vert  shadowmap.frag  shadowmap.vert  ssao.frag  ssaoblur.frag  textured_lit.frag  triangle.frag  triangle.vert
src/: CMakeLists.txt  app.cpp  app.h  main.cpp  mesh.cpp  mesh.h  utils.h  vk_initializers.cpp  vk_initializers.h  vk_pipeline.cpp  vk_pipeline.h  vk_textures.cpp  vk_textures.h
